# Tuxpaint-Android

./: .gitignore  AndroidManifest.xml  IMPLEMENTATION_PLAN.md  MAGIC_TOOL_SUCCESS.md  MULTITOUCH_FINAL_STATUS.md  MULTITOUCH_IMPLEMENTATION.md  MULTITOUCH_SUCCESS_SUMMARY.md  PRIVACY.md  README.md  SESSION_SUMMARY.md  SOUND_TOGGLE_EXPLANATION.md  TASK_COMPLETE.md  TEST_SOUND_BUTTON.md  TEST_SUMMARY.md  TODO.md  build.gradle  build.xml  local.properties  org.tuxpaint.txt  run_egl_test.sh  test_find_magic_button.sh  test_label_tool.sh  test_magic_complete.sh  test_magic_visual.sh  test_multitouch_visual.sh  test_text_complete.sh  test_text_e2e.sh  test_text_tool.sh  test_text_visible.sh
app/src/main/jni/SDL2_Pango-0.1.2/: Android.mk  ChangeLog  README  aclocal.m4  configure  configure.in
app/src/main/jni/SDL2_Pango-0.1.2/VisualC2003/: SDL_Pango.rc  SDL_Pango.sln  SDL_Pango.vcproj
app/src/main/jni/SDL2_Pango-0.1.2/Wix/: Makefile.in  README  dev.xml.in  merge_module.xml.in  testbench.xml.in
app/src/main/jni/SDL2_Pango-0.1.2/autom4te.cache/: output.1  traces.0
app/src/main/jni/SDL2_Pango-0.1.2/debian/: autoreconf.before  libsdl2-pango-dev.install
app/src/main/jni/SDL2_Pango-0.1.2/src/: SDL2_Pango.c  SDL2_Pango.h
app/src/main/jni/SDL2_Pango-0.1.2/test/: INSTALL  markup.txt  testbench.c
app/src/main/jni/gdk-pixbuf-2.31.4/: Makefile.am  config.h  config.h.in  config.h.win32  configure
app/src/main/jni/gdk-pixbuf-2.31.4/contrib/: Makefile.am
app/src/main/jni/gdk-pixbuf-2.31.4/docs/: Makefile.in
app/src/main/jni/gdk-pixbuf-2.31.4/gdk-pixbuf/: Makefile.am  Makefile.in  gdk-pixbuf-animation.c  gdk-pixbuf-features.h.in  gdk-pixbuf-loader.c  gdk-pixbuf-simple-anim.c  gdk-pixbuf.c  gdk-pixdata.c  gdk_pixbuf.rc  io-gdip-jpeg.c  io-gdip-tiff.c  io-gdip-utils.c  io-jpeg.c  io-pcx.c  io-pixdata.c  io-pnm.c  io-tga.c  io-wbmp.c  queryloaders.c
app/src/main/jni/gdk-pixbuf-2.31.4/po/: LINGUAS  ar.po  az.po  be@latin.po  bn.po  bs.po  ca.po  crh.po  csb.po  el.po  en_CA.po  eo.po  fa.po  gdk-pixbuf.pot  gl.po  he.po  hi.po  hu.po  ia.po  id.po  io.po  ku.po  li.po  lt.po  mi.po  ml.po  mn.po  ms.po  nds.po  nn.po  nso.po  pa.po  pl.po  ps.po  sk.po  sr.po  ta.po  te.po  tk.po  tr.po  (+5 more)
app/src/main/jni/gdk-pixbuf-2.31.4/tests/: Makefile.in  dpi.tiff  pixbuf-composite.c  pixbuf-icon-serialize.c  pixbuf-readonly-to-mutable.c  pixbuf-resource.c  pixbuf-save.c  pixbuf-scale.c  pixbuf-threads.c  resources.gresource.xml  test-animation.ani  test-common.c
app/src/main/jni/gdk-pixbuf-2.42.9/: .clang-format  .gitlab-ci.yml  Android.mk  CONTRIBUTING.md  NEWS  README.md  README.msvc  meson.build  meson_options.txt
app/src/main/jni/gdk-pixbuf-2.42.9/build-aux/: dist.py  gen-installed-test.py  gen-resources.py  gen-thumbnailer.py  post-install.py
app/src/main/jni/gdk-pixbuf-2.42.9/docs/: gdk-pixbuf-csource.rst  gdk-pixbuf-query-loaders.rst  (+5 more)
jni/SDL2_Pango-0.1.2/: AUTHORS  Makefile.am  NEWS  SDL2_Pango.pc.in
jni/SDL2_Pango-0.1.2/.pc/: applied-patches
jni/SDL2_Pango-0.1.2/.pc/am_maintainer_mode.patch/: configure.in
jni/SDL2_Pango-0.1.2/.pc/api_additions.patch/src/: SDL_Pango.h
jni/SDL2_Pango-0.1.2/.pc/matrix_declarations.patch/src/: SDL_Pango.c  SDL_Pango.h
jni/SDL2_Pango-0.1.2/VisualC2003/: Makefile.am  Makefile.in  SDL_Pango.def  resource.h
jni/SDL2_Pango-0.1.2/VisualC2003/testbench/: testbench.vcproj
jni/SDL2_Pango-0.1.2/VisualC2003/testbench/Setup/: Setup.sln
jni/SDL2_Pango-0.1.2/Wix/: license.rtf  shave.xslt  ui.xml
jni/SDL2_Pango-0.1.2/Wix/bitmap/CVS/: Repository  Root
jni/SDL2_Pango-0.1.2/autom4te.cache/: output.0  requests  traces.1
jni/SDL2_Pango-0.1.2/debian/: autoreconf.after  changelog  control  copyright  libsdl2-pango-dev.examples  libsdl2-pango1.install  rules
jni/SDL2_Pango-0.1.2/debian/patches/: am_maintainer_mode.patch
jni/SDL2_Pango-0.1.2/docs/: Doxyfile.in  Makefile.am  Makefile.in
jni/SDL2_Pango-0.1.2/docs/html/: _s_d_l___pango_8c.html  _s_d_l___pango_8h-source.html  _s_d_l___pango_8h.html  annotated.html  files.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  struct___s_d_l_pango___matrix.html
jni/SDL2_Pango-0.1.2/docs/html/CVS/: Entries  Repository
jni/SDL2_Pango-0.1.2/sidebyside_patch/: README  fontconfig.patch  glib2.patch  pango.patch
jni/SDL2_Pango-0.1.2/sidebyside_patch/CVS/: Entries  Repository
jni/SDL2_Pango-0.1.2/src/: Makefile.am  Makefile.in
jni/SDL2_Pango-0.1.2/test/: Makefile.am  README  configure.in
jni/gdk-pixbuf-2.31.4/tests/: Makefile.am  pixbuf-dpi.c  pixbuf-jpeg.c  pixbuf-lowmem.c  pixbuf-random.c  pixbuf-randomly-modified.c  pixbuf-read.c  pixbuf-short-gif-write.c  pixbuf-stream.c  resources.c  test-common.h
jni/gdk-pixbuf-2.31.4/tests/test-images/: invalid_ico_test_3  valid.xbm
jni/libcroco-0.6.8/: Makefile.in  aclocal.m4  autogen.sh  config.h.win32  config.h.win32.in  configure  configure.in  libcroco.doap  libcroco.pc.in
jni/libcroco-0.6.8/csslint/: Makefile.am
jni/libcroco-0.6.8/docs/reference/: Makefile.in  libcroco-docs.sgml
jni/libcroco-0.6.8/docs/reference/html/: index.sgml  libcroco-cr-attr-sel.html  libcroco-cr-doc-handler.html  libcroco-cr-enc-handler.html  libcroco-cr-fonts.html  libcroco-cr-input.html  libcroco-cr-num.html  libcroco-cr-om-parser.html  libcroco-cr-parsing-location.html  libcroco-cr-rgb.html  libcroco-cr-sel-eng.html  libcroco-cr-selector.html  libcroco-cr-simple-sel.html  libcroco-cr-string.html  libcroco-cr-style.html  libcroco-cr-stylesheet.html  libcroco-cr-tknzr.html  libcroco-libcroco-config.html  libcroco.devhelp2
jni/libcroco-0.6.8/docs/reference/tmpl/: cr-attr-sel.sgml  cr-declaration.sgml  cr-doc-handler.sgml  cr-fonts.sgml  cr-input.sgml  cr-num.sgml  cr-om-parser.sgml  cr-parser.sgml  cr-prop-list.sgml  cr-pseudo.sgml  cr-selector.sgml  cr-simple-sel.sgml  cr-string.sgml  cr-style.sgml  cr-stylesheet.sgml  cr-term.sgml  cr-token.sgml  cr-utils.sgml  libcroco.sgml
jni/libcroco-0.6.8/src/: libcroco.symbols
jni/libcroco-0.6.8/tests/: test0-main.c  test3-main.c  test6-main.c
jni/libcroco-0.6.8/tests/test-output-refs/: Makefile.in
(+5714 files in other folders)
