SUBDIRS = src
DIST_SUBDIRS = src docs VisualC2003

EXTRA_DIST = \
    SDL2_Pango.pc.in sidebyside_patch \
	test/AUTHORS test/ChangeLog test/configure.in test/COPYING \
	test/INSTALL test/Makefile.am test/markup.txt test/NEWS \
	test/README test/testbench.c \
	Wix/COPYING.txt Wix/gettext.README Wix/glib2.README Wix/libiconv.README \
	Wix/license.rtf Wix/pango.README Wix/README Wix/shave.xslt Wix/ui.xml \
	Wix/bitmap

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = SDL2_Pango.pc
